--- a/packages/electron-builder/package.json
+++ b/packages/electron-builder/package.json
@@ -1,7 +1,7 @@
 {
   "name": "electron-builder",
   "description": "A complete solution to package and build a ready for distribution Electron app for MacOS, Windows and Linux with “auto update” support out of the box",
-  "version": "0.0.0-semantic-release",
+  "version": "19.34.2",
   "main": "out/index.js",
   "files": [
     "out",
@@ -57,12 +57,12 @@
     "chalk": "^2.1.0",
     "chromium-pickle-js": "^0.2.0",
     "cuint": "^0.2.2",
-    "app-package-builder": "0.0.0-semantic-release",
-    "builder-util-runtime": "0.0.0-semantic-release",
-    "builder-util": "0.0.0-semantic-release",
+    "app-package-builder": "1.0.3",
+    "builder-util-runtime": "1.0.6",
+    "builder-util": "2.0.8",
     "electron-download-tf": "4.3.4",
     "electron-osx-sign": "0.4.7",
-    "electron-publish": "0.0.0-semantic-release",
+    "electron-publish": "19.34.0",
     "fs-extra-p": "^4.4.2",
     "hosted-git-info": "^2.5.0",
     "is-ci": "^1.0.10",
@@ -77,13 +77,13 @@
     "update-notifier": "^2.2.0",
     "yargs": "^9.0.1",
     "debug": "^3.1.0",
-    "asar-integrity": "0.0.0-semantic-release",
+    "asar-integrity": "0.2.1",
     "lazy-val": "^1.0.2",
     "dotenv": "^4.0.0",
     "dotenv-expand": "^4.0.1",
     "temp-file": "^2.0.3",
     "ejs": "^2.5.7",
-    "dmg-builder": "0.0.0-semantic-release"
+    "dmg-builder": "2.1.0"
   },
   "typings": "./out/index.d.ts",
   "publishConfig": {
